# QtOpc

./: .gitignore  CMakeLists.txt  QtOpc.sln  README.md
QtOpc/: OpcUaClient.cpp  OpcUaClient.h  QtOpc.vcxproj  QtOpc.vcxproj.filters  main.cpp
app/: CMakeLists.txt
app/include/: MainWindow.h  OpcUaClient.h
app/src/: MainWindow.cpp  OpcUaClient.cpp  main.cpp
